--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,9 +27,9 @@
     </div>
   </div>
   <!-- Page content -->
-  <!-- <div class="container-fluid " style="background-color: #c9c9c9;">
+  <div class="container-fluid " style="background-color: #c9c9c9;">
     <div class="row justify-content-center">
-      <div class="col-lg-7 col-md-7">
+  <!--    <div class="col-lg-7 col-md-7">
         <div class="card bg-secondary border-0 mb-0 mt--8">
           <div class="card-header bg-transparent pb-5">
             <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
