1)Mongoose added, 2)Necessary changes to userdb.js, error_page, home, my_profile_page, topnav to support new ids, 3)backend added for modeling the user schema, 4)Read from local database implemented in index.js (still in comments this implementation)

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -2,7 +2,7 @@
      style="background-color: #5e72e4;"> <!-- TODO Change color -->  
 
   <a class="navbar-brand"
-     href="/5fae6b01eeab478c1207e2bf">
+     href="/5fe30cbb3e8e92284cfd2857"> <!-- TODO Delete this line -->
     <img src="/assets/Letter.png"
          width="30"
          height="30"
@@ -33,7 +33,7 @@
       </li> -->
       <li class="nav-item active float-right">
         <a class="nav-link font-weight-bold"
-           href="/5fae6b01eeab478c1207e2bf">My Profile<span class="sr-only">(current)</span></a>
+           href="/5fe30cbb3e8e92284cfd2857">My Profile<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
