1)Deprecated files deleted, 2)Login, register, new game pages created, 3)Routing via Express.js created

--- a/views/partials/topnav.ejs
+++ b/views/partials/topnav.ejs
@@ -35,6 +35,18 @@
         <a class="nav-link font-weight-bold"
            href="/5fe706f450a0c923cc4248e5">My Profile<span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/log-in">Log In <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/register">Register <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link font-weight-bold"
+           href="/create-new-game">Create a new game!<span class="sr-only">(current)</span></a>
+      </li>
     </ul>
   </div>
 </nav>
