--- a/views/error_page.ejs
+++ b/views/error_page.ejs
@@ -23,10 +23,13 @@
             </div>
         </div>
     </div>
-</div>
-<!-- Footer -->
-<%- include('partials/footer'); -%>
-</div>
+    <!-- Page content -->
+    <div class="container-fluid mt--6">
+        <div class="row">
+        </div>
+        <!-- Footer -->
+        <%- include('partials/footer'); -%>
+    </div>
 </div>
 
 <%- include('partials/end_file'); -%>
