1)Register functionality added (no encryption yet), 2)Log-In functionality added (no encryption yet), 3)TODO added

--- a/views/login_page.ejs
+++ b/views/login_page.ejs
@@ -25,8 +25,8 @@
          style="background-color: #c9c9c9;">
         <div class="row justify-content-center">
             <div class="col-lg-7 col-md-7">
-                <div class="card bg-secondary border-0 mb-0 mt--8">
-                    <div class="card-header bg-transparent pb-5">
+                 <div class="card bg-secondary border-0 mb-0 mt--8">
+                  <!--  <div class="card-header bg-transparent pb-5">
                         <div class="text-muted text-center mt-2 mb-3"><small>Sign in with</small></div>
                         <div class="btn-wrapper text-center">
                             <a href="#"
@@ -40,22 +40,23 @@
                                 <span class="btn-inner--text">Google</span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="card-body px-lg-5 py-lg-5">
                         <div class="text-center text-muted mb-4">
-                            <small>Or sign in with credentials</small>
+                            <small>Sign in with credentials</small>
                         </div>
-                        <form role="form">
+                        <form role="form" action="/log-in" method="post">
                             <div class="form-group mb-3">
                                 <div class="input-group input-group-merge input-group-alternative">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">
-                                            <div class="far fa-envelope"></div>
+                                            <div class="fas fa-user-alt"></div>
                                         </span>
                                     </div>
                                     <input class="form-control"
-                                           placeholder="Email"
-                                           type="email">
+                                           placeholder="Username"
+                                           name="username"
+                                           type="text">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -65,10 +66,11 @@
                                     </div>
                                     <input class="form-control"
                                            placeholder="Password"
+                                           name="password"
                                            type="password">
                                 </div>
                             </div>
-                            <div class="custom-control custom-control-alternative custom-checkbox">
+                            <!-- <div class="custom-control custom-control-alternative custom-checkbox">
                                 <input class="custom-control-input"
                                        id=" customCheckLogin"
                                        type="checkbox">
@@ -76,15 +78,15 @@
                                        for=" customCheckLogin">
                                     <span class="text-muted">Remember me</span>
                                 </label>
-                            </div>
+                            </div> -->
                             <div class="text-center">
-                                <button type="button"
+                                <button type="submit"
                                         class="btn btn-primary my-4">Sign in</button>
-                            </div>
+                            </div> 
                         </form>
                     </div>
                 </div>
-                <div class="row mt-3">
+                <!-- <div class="row mt-3">
                     <div class="col-6">
                         <a href="#"
                            style="color:white;"><small>Forgot password?</small></a>
@@ -93,7 +95,7 @@
                         <a href="#"
                           style="color:white;"><small>Create new account</small></a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- Footer -->
