--- a/views/my_profile_page.ejs
+++ b/views/my_profile_page.ejs
@@ -15,10 +15,10 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <h1 class="display-2 text-white">Hello <%= name %></h1>
-          <a href="/5fe7084f5171b2305079020b"
-             class="btn btn-neutral">Go to Konstantina's profile</a>
-          <a href="/5fe706f450a0c923cc4248e5"
-             class="btn btn-neutral">Go to Christos' profile</a>
+          <a href="/create-new-game"
+             class="btn btn-neutral">Create a new game!</a>
+          <a href="/log-out"
+             class="btn btn-neutral">Log out</a>
         </div>
       </div>
     </div>
